vendored_parsers/tree-sitter-f-sharp/grammar.js
    file: $ =>
      seq(
        repeat($.compiler_directive_decl),
        choice(
          $.named_module,
          repeat1($.namespace),
          repeat($._module_elem),
        ),
      ),

    _module_elem: $ =>
      choice(
        $.value_declaration,
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.compiler_directive_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $._expression,
        // $.exception_defn
      ),

    value_declaration: $ =>
      seq(
        optional($.attributes),
        choice(
          prec(PREC.LET_DECL, $.function_or_value_defn),
          prec(PREC.DO_DECL, $.do),
        ),
      ),

    do: $ => prec(PREC.DO_EXPR + 1,
      seq(
        'do',
        $._expression_block,
      )),

    _function_or_value_defns: $ =>
      prec.right(
        seq($._function_or_value_defn_body, repeat(seq('and', $._function_or_value_defn_body))),
      ),

    function_or_value_defn: $ =>
      seq(
        choice('let', 'let!'),
        choice(
          $._function_or_value_defn_body,
          seq('rec', $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: $ =>
      seq(
        choice(
          $.function_declaration_left,
          $.value_declaration_left,
        ),
        optional(seq(':', $.type)),
        '=',
        field('body', $._expression_block),
      ),

    value_declaration_left: $ =>
      prec.left(2, seq(
        optional('mutable'),
        optional($.access_modifier),
        $._pattern,
        optional($.type_arguments),
      )),

    _pattern: $ =>
      choice(
        alias('null', $.null_pattern),
        alias('_', $.wildcard_pattern),
        alias($.const, $.const_pattern),
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
      ),

    identifier_pattern: $ =>
      prec.left(-1,
        seq($.long_identifier, optional($._pattern_param), optional($._pattern)),
      ),

    _pattern_param: $ =>
      prec(2,
        choice(
          $.const,
          $.long_identifier,
          // seq($.long_identifier, $._pattern_param),
          // seq($._pattern_param, ":", $.type),
          // seq(
          //   "[",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   "]",
          // ),
          // seq(
          //   "(",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   ")",
          // ),
          // seq("<@", $._expression, "@>"),
          // seq("<@@", $._expression, "@@>"),
          'null',
        ),
      ),
    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: $ =>
      seq(
        $._indent,
        $._expression,
        $._dedent,
      ),

    _expression: $ =>
      choice(
        'null',
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.dot_expression,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.object_instantiation_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        // $.call_expression,
        $.tuple_expression,
        $.application_expression,
        // (static-typars : (member-sig) expr)
      ),

    infix_expression: $ =>
      prec.left(PREC.SPECIAL_INFIX,
        seq(
          $._expression,
          $.infix_op,
          $._expression,
        )),


    sequential_expression: $ =>
      prec.right(PREC.SEQ_EXPR,
        seq(
          $._expression,
          repeat1(
            prec.right(PREC.SEQ_EXPR,
              seq(
                alias($._newline, ';'),
                $._expression,
              ),
            ),
          ),
        ),
      ),

    //
    // Expressions (END)
    //

    //
    // Computation expression (BEGIN)
    //

    _hex_digit_imm: _ => token.immediate(/[0-9a-fA-F]/),
    _digit_char_imm: _ => token.immediate(/[0-9]/),
    _string_char: $ => choice(
      $._simple_string_char,
      $._escape_char,
      $._non_escape_char,
      $._trigraph,
      $._unicodegraph_short,
      $._unicodegraph_long,
    ),

    format_string_eval: $ =>
      seq(token.immediate(prec(1000, '{')), $._expression, '}'),

    format_string: $ =>
      seq(
        token(prec(100, '$"')),
        repeat(choice($.format_string_eval, $._string_char)),
        '"',
      ),

    string: $ =>
      choice(
        seq('"', repeat($._string_char), '"'),
        $.format_string,
      ),
    _verbatim_string_char: $ => choice(
      $._simple_string_char,
      $._non_escape_char,
      '\\',
    ),
    verbatim_string: $ => seq('@"', repeat($._verbatim_string_char), token.immediate('"')),
    format_triple_quoted_string: $ =>
      seq(
        token(prec(100, '$"""')),
        // repeat(choice($.format_string_eval, $._string_char)),
        $._triple_quoted_content,
        '"""',
      ),

    triple_quoted_string: $ =>
      choice(
        seq(
          '"""',
          $._triple_quoted_content,
          '"""'),
        $.format_triple_quoted_string,
      ),

    const: $ => choice(
      $.sbyte, $.int16, $.int32, $.int64, $.byte, $.uint16, $.uint32, $.int,
      $.nativeint, $.unativeint, $.decimal,
      $.uint64, $.ieee32, $.ieee64, $.bignum, $.char, $.string,
      $.verbatim_string, $.triple_quoted_string, $.bytearray,
      $.verbatim_bytearray, $.bytechar, $.bool, $.unit),

    // Identifiers:
    long_identifier: $ =>
      prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    _infix_or_prefix_op: _ =>
      choice(
        '+',
        '-',
        '+.',
        '-.',
        '%',
        '&',
        '&&',
      ),

    infix_op: $ =>
      prec(PREC.INFIX_OP,
        choice(
          $._infix_or_prefix_op,
          /[-+<>|&^*/%][!%&*+-./<=>@^|~?]*/,
          '||',
          '=',
          '!=',
          ':=',
          '::',
          '$',
          'or',
          '?',
          '<@',
          '<@@',
          '@>',
          '@@>',
          '?',
          '?<-',
        )),

    // Numbers
    _octaldigit_imm: _ => token.immediate(/[0-7]/),
    _bitdigit_imm: _ => token.immediate(/[0-1]/),
    int: $ => seq(/[0-9]/, repeat($._digit_char_imm)),
    xint: $ => choice(
      seq(/0[xX]/, repeat1($._hex_digit_imm)),
      seq(/0[oO]/, repeat1($._octaldigit_imm)),
      seq(/0[bB]/, repeat1($._bitdigit_imm)),
    ),

    sbyte: $ => seq(choice($.int, $.xint), token.immediate('y')),
    byte: $ => seq(choice($.int, $.xint), token.immediate('uy')),
    int16: $ => seq(choice($.int, $.xint), token.immediate('s')),
    uint16: $ => seq(choice($.int, $.xint), token.immediate('us')),
    int32: $ => seq(choice($.int, $.xint), token.immediate('l')),
    uint32: $ => seq(choice($.int, $.xint), token.immediate(choice('ul', 'u'))),
    nativeint: $ => seq(choice($.int, $.xint), token.immediate('n')),
    unativeint: $ => seq(choice($.int, $.xint), token.immediate('un')),
    int64: $ => seq(choice($.int, $.xint), token.immediate('L')),
    uint64: $ => seq(choice($.int, $.xint), token.immediate(choice('UL', 'uL'))),

    ieee32: $ => choice(seq($.float, token.immediate('f')), seq($.xint, token.immediate('lf'))),
    ieee64: $ => seq($.xint, token.immediate('LF')),

    bignum: $ => seq($.int, token.immediate(/[QRZING]/)),
    decimal: $ => seq(choice($.float, $.int), token.immediate(/[Mm]/)),

    float: $ =>
      alias(
        choice(
          seq(
            $.int,
            token.immediate('.'),
            optional($.int)
          ),
          seq(
            $.int,
            optional(seq(token.immediate('.'), $.int)),
            token.immediate(/[eE][+-]?/),
            $.int
          ),
        ), 'float'),

    //
    // Constants (END)
    //
    //
    identifier: _ =>
      token(
        choice(
          /[_\p{XID_Start}][_'\p{XID_Continue}]*/,
          /``([^`\n\r\t])+``/,
        ),
      ),
  },

});

function scoped(rule, indent, dedent) {
  return field('block', seq(indent, rule, dedent));
}
